{
  "version": 4,
  "terraform_version": "1.0.10",
  "serial": 1570,
  "lineage": "ca58efb8-bfb2-bcb4-0cc0-fbadae096c2f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "ecs_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:514072627411:loadbalancer/app/vb-poc-gateway/f4f329629f4f637d",
            "arn_suffix": "app/vb-poc-gateway/f4f329629f4f637d",
            "dns_name": "vb-poc-gateway-609834297.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:514072627411:loadbalancer/app/vb-poc-gateway/f4f329629f4f637d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "vb-poc-gateway",
            "security_groups": [
              "sg-026c567cb87b01e80"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0270342d64e46426e"
              },
              {
                "subnet_id": "subnet-052e15e29f2b907e8"
              }
            ],
            "subnets": [
              "subnet-0270342d64e46426e",
              "subnet-052e15e29f2b907e8"
            ],
            "vpc_id": "vpc-029413a9d42eb77f6",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_vpc.ecs_vpc",
            "data.aws_availability_zones.available",
            "aws_security_group.lb",
            "aws_subnet.public_ecs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:514072627411:listener/app/vb-poc-gateway/f4f329629f4f637d/db373d9c5ab7152e",
            "certificate_arn": "arn:aws:acm:us-east-1:514072627411:certificate/10670003-cc49-4012-998a-bb1bb6f510db",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:514072627411:targetgroup/vb-poc-gateway/4003c9d89da9830d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:514072627411:listener/app/vb-poc-gateway/f4f329629f4f637d/db373d9c5ab7152e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:514072627411:loadbalancer/app/vb-poc-gateway/f4f329629f4f637d",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb",
            "aws_subnet.public_ecs",
            "aws_vpc.ecs_vpc",
            "data.aws_availability_zones.available",
            "aws_acm_certificate.alb_cert",
            "aws_acmpca_certificate_authority.mesh_ca",
            "aws_alb.ecs_vpc",
            "aws_alb_target_group.gateway"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:514072627411:targetgroup/vb-poc-gateway/4003c9d89da9830d",
            "arn_suffix": "targetgroup/vb-poc-gateway/4003c9d89da9830d",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:514072627411:targetgroup/vb-poc-gateway/4003c9d89da9830d",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "vb-poc-gateway",
            "port": 8080,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-029413a9d42eb77f6"
          },
          "dependencies": [
            "aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0dae11e6593f9adec",
            "domain": "vpc",
            "id": "eipalloc-07d8e8dc0f04ada8d",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a8c20d089027550e",
            "private_dns": "ip-172-17-2-151.ec2.internal",
            "private_ip": "172.17.2.151",
            "public_dns": "ec2-52-55-207-100.compute-1.amazonaws.com",
            "public_ip": "52.55.207.100",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.ecs_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-00007a090ac3add5e",
            "domain": "vpc",
            "id": "eipalloc-072a69b662302d55d",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0ae9964c2ac5fd92f",
            "private_dns": "ip-172-17-3-218.ec2.internal",
            "private_ip": "172.17.3.218",
            "public_dns": "ec2-52-5-62-242.compute-1.amazonaws.com",
            "public_ip": "52.5.62.242",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0133407e358cc1af0",
            "arn": "arn:aws:ec2:us-east-1:514072627411:instance/i-065ee22f3d45fbe43",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-065ee22f3d45fbe43",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "bastion",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07594cee666da97fd",
            "private_dns": "ip-172-17-2-246.ec2.internal",
            "private_ip": "172.17.2.246",
            "public_dns": "ec2-54-226-9-31.compute-1.amazonaws.com",
            "public_ip": "54.226.9.31",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-085774aa9618b6e23",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-052e15e29f2b907e8",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07f781d930028f492"
            ]
          },
          "dependencies": [
            "aws_key_pair.bastion_key",
            "aws_security_group.bastion-sg",
            "aws_subnet.public_ecs",
            "aws_vpc.ecs_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:514072627411:internet-gateway/igw-0d298fa5a643892a2",
            "id": "igw-0d298fa5a643892a2",
            "owner_id": "514072627411",
            "vpc_id": "vpc-029413a9d42eb77f6"
          },
          "dependencies": [
            "aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07d8e8dc0f04ada8d",
            "connectivity_type": "public",
            "id": "nat-0bff720da0ae6485f",
            "network_interface_id": "eni-0a8c20d089027550e",
            "private_ip": "172.17.2.151",
            "public_ip": "52.55.207.100",
            "subnet_id": "subnet-052e15e29f2b907e8"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_subnet.public_ecs",
            "aws_vpc.ecs_vpc",
            "data.aws_availability_zones.available",
            "aws_eip.gw"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-072a69b662302d55d",
            "connectivity_type": "public",
            "id": "nat-0564ce35c58ab428d",
            "network_interface_id": "eni-0ae9964c2ac5fd92f",
            "private_ip": "172.17.3.218",
            "public_ip": "52.5.62.242",
            "subnet_id": "subnet-0270342d64e46426e"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_subnet.public_ecs",
            "aws_vpc.ecs_vpc",
            "data.aws_availability_zones.available",
            "aws_eip.gw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d298fa5a643892a2",
            "id": "r-rtb-08937cccda77968421080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08937cccda7796842",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:514072627411:route-table/rtb-06061ba72592e0e50",
            "id": "rtb-06061ba72592e0e50",
            "owner_id": "514072627411",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bff720da0ae6485f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-029413a9d42eb77f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.gw",
            "aws_subnet.public_ecs",
            "aws_vpc.ecs_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:514072627411:route-table/rtb-08ba20ea73201b575",
            "id": "rtb-08ba20ea73201b575",
            "owner_id": "514072627411",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0564ce35c58ab428d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-029413a9d42eb77f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_nat_gateway.gw",
            "aws_subnet.public_ecs",
            "aws_vpc.ecs_vpc",
            "data.aws_availability_zones.available",
            "aws_eip.gw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02bf72ed07ba7aeb2",
            "route_table_id": "rtb-06061ba72592e0e50",
            "subnet_id": "subnet-05d30bd962d0eeb2b"
          },
          "dependencies": [
            "aws_subnet.public_ecs",
            "aws_vpc.ecs_vpc",
            "data.aws_availability_zones.available",
            "aws_eip.gw",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.gw",
            "aws_route_table.private_ecs",
            "aws_subnet.private_ecs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e2c1a2ff7c74a9b6",
            "route_table_id": "rtb-08ba20ea73201b575",
            "subnet_id": "subnet-05af3f541c499e577"
          },
          "dependencies": [
            "aws_subnet.public_ecs",
            "aws_vpc.ecs_vpc",
            "data.aws_availability_zones.available",
            "aws_eip.gw",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.gw",
            "aws_route_table.private_ecs",
            "aws_subnet.private_ecs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:514072627411:security-group/sg-07f781d930028f492",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07f781d930028f492",
            "ingress": [
              {
                "cidr_blocks": [
                  "69.181.181.129/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-security-group",
            "name_prefix": "",
            "owner_id": "514072627411",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-029413a9d42eb77f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_backend_task",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:514072627411:security-group/sg-085ec9822755b5a12",
            "description": "Allow from application gateway",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-085ec9822755b5a12",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-045287e6e9c0c93cf",
                  "sg-07f781d930028f492"
                ],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9901,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07f781d930028f492"
                ],
                "self": false,
                "to_port": 9901
              }
            ],
            "name": "vb-poc-backend",
            "name_prefix": "",
            "owner_id": "514072627411",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-029413a9d42eb77f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ecs_vpc",
            "aws_security_group.bastion-sg",
            "aws_security_group.ecs_frontend_task",
            "aws_security_group.gateway",
            "aws_security_group.lb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_frontend_task",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:514072627411:security-group/sg-045287e6e9c0c93cf",
            "description": "Allow from application gateway",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-045287e6e9c0c93cf",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07f781d930028f492",
                  "sg-0ad78a25545887462"
                ],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9901,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07f781d930028f492"
                ],
                "self": false,
                "to_port": 9901
              }
            ],
            "name": "vb-poc-frontend",
            "name_prefix": "",
            "owner_id": "514072627411",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-029413a9d42eb77f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ecs_vpc",
            "aws_security_group.bastion-sg",
            "aws_security_group.gateway",
            "aws_security_group.lb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:514072627411:security-group/sg-0ad78a25545887462",
            "description": "allow inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ad78a25545887462",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-026c567cb87b01e80",
                  "sg-07f781d930028f492"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9901,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07f781d930028f492"
                ],
                "self": false,
                "to_port": 9901
              }
            ],
            "name": "vb-poc-gateway",
            "name_prefix": "",
            "owner_id": "514072627411",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-029413a9d42eb77f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ecs_vpc",
            "aws_security_group.bastion-sg",
            "aws_security_group.lb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:514072627411:security-group/sg-026c567cb87b01e80",
            "description": "controls access to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-026c567cb87b01e80",
            "ingress": [
              {
                "cidr_blocks": [
                  "69.181.181.129/32"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "vb-poc-alb",
            "name_prefix": "",
            "owner_id": "514072627411",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-029413a9d42eb77f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:514072627411:subnet/subnet-05d30bd962d0eeb2b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.17.0.0/24",
            "id": "subnet-05d30bd962d0eeb2b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "514072627411",
            "vpc_id": "vpc-029413a9d42eb77f6"
          },
          "dependencies": [
            "aws_vpc.ecs_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:514072627411:subnet/subnet-05af3f541c499e577",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.17.1.0/24",
            "id": "subnet-05af3f541c499e577",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "514072627411",
            "vpc_id": "vpc-029413a9d42eb77f6"
          },
          "dependencies": [
            "aws_vpc.ecs_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:514072627411:subnet/subnet-052e15e29f2b907e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.17.2.0/24",
            "id": "subnet-052e15e29f2b907e8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "514072627411",
            "vpc_id": "vpc-029413a9d42eb77f6"
          },
          "dependencies": [
            "aws_vpc.ecs_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:514072627411:subnet/subnet-0270342d64e46426e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.17.3.0/24",
            "id": "subnet-0270342d64e46426e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "514072627411",
            "vpc_id": "vpc-029413a9d42eb77f6"
          },
          "dependencies": [
            "aws_vpc.ecs_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ecs_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:514072627411:vpc/vpc-029413a9d42eb77f6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.17.0.0/16",
            "default_network_acl_id": "acl-0073d1ef2439324df",
            "default_route_table_id": "rtb-08937cccda7796842",
            "default_security_group_id": "sg-0cad343bd3bbee634",
            "dhcp_options_id": "dopt-54167b2e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-029413a9d42eb77f6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08937cccda7796842",
            "owner_id": "514072627411"
          }
        }
      ]
    }
  ]
}